# jobswitch-env

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
.claude/: settings.json
baseline/: claude_agent.py  prompts.py  run_baseline.py
env/: __init__.py  environment.py  models.py  reward.py  state.py
graders/: __init__.py  negotiation_grader.py  network_health_grader.py  offer_quality_grader.py  process_efficiency_grader.py
server/: app.py
simulation/: job_market.py  negotiation.py  network_graph.py  pipeline.py  profile.py
tasks/: base.py  task1_straightforward.py  task2_cold_network.py  task3_competing_pressures.py
tests/: test_env.py  test_graders.py  test_models.py  test_simulation.py  test_tasks.py
